[project]
name = "rbd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "silero-vad",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[tool.uv.sources]
silero-vad = { git = "https://github.com/snakers4/silero-vad" }
